docker/k8s/init-cluster/cilium-minecraft-firewall.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "monumenta-play-firewall"
spec:
  description: ""
  endpointSelector:
     matchLabels:
      app.kubernetes.io/part-of: velocity
  ingress:
    # Loopback / local host processes
    - fromEntities:
        - host
    # Cluster-internal traffic (pods + nodes)
    - fromEntities:
        - cluster
    # Publicly exposed services
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "25566"   # Minecraft
              protocol: TCP
    # ICMP (basic diagnostics)
    - icmps:
        - fields:
            - type: DestinationUnreachable
              family: IPv4
        - fields:
            - type: DestinationUnreachable
              family: IPv6
        - fields:
            - type: TimeExceeded
              family: IPv4
        - fields:
            - type: TimeExceeded
              family: IPv6
        - fields:
            - type: ParameterProblem
              family: IPv4
        - fields:
            - type: ParameterProblem
              family: IPv6
        - fields:
            - type: EchoRequest
              family: IPv4
        - fields:
            - type: EchoRequest
              family: IPv6
        - fields:
            - type: EchoReply
              family: IPv4
        - fields:
            - type: EchoReply
              family: IPv6
  # Egress settings
  egress:
    - toEntities:
        - host
    # Cluster-internal traffic (pods + nodes)
    - toEntities:
        - cluster
    - toEntities:
        - world
